# tc-pytools-v2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  QUICKREF.md  README.md  ci.sh  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
.pre-commit-cache/: db.db
genome/: __init__.py  rename_genome_id.py  split_bed_fai_by_number.py
gtf/: GCF_016699485.2_bGalGal1.mat.broiler.GRCg7b_assembly_report.txt  __init__.py  rename_genome_id.py  rename_ngdc_genome_id.py  test_ncbi.py
gtf/docs/: README.md
gtf/tests/: __init__.py  test_rename_genome_id.py  test_rename_ngdc_genome_id.py
liftover/: liftover_flank_and_site.py
vcf/: table2vcf.py
vcf/tests/: test_table2vcf.py
